--- a/src/components/AttendeesList/AttendeesList.css
+++ b/src/components/AttendeesList/AttendeesList.css
@@ -6,6 +6,9 @@
     display: flex;
     flex-direction: column;
     background-color: white;
+    align-items: center;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .attendees-outer{
